--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
                     <p class="item-texto">Inscrições</p>
                 </a>
                 </div>
+                  <div class="menu-bloco">
+                <a href="https://www.youtube.com/" class="bloco-item">
+                    <img class="icone" src="historia.png" alt="home">
+                    <p class="item-texto">Histórico</p>
+                </a>
+        
+                <a href="https://www.youtube.com/" class="bloco-item ">
+                    <img class="icone" src="adicionar-a-playlist.png" alt="home">
+                    <p class="item-texto">Playlist</p>
+                </a>
+                </div>
             </div>
         </div>
         <div class="conteudo">
